# Qwentest-

./: .gitignore  .lingma.json  .pre-commit-config.yaml  .qwenignore  CHANGELOG.md  CONTRIBUTING.md  QWEN.md  README.md  ble_all_data.txt  ble_autosync_log.txt  ble_bond_log.txt  ble_connect_logs.txt  ble_connection_check.txt  ble_descriptor_test.txt  ble_filtered.txt  ble_indication_log.txt  ble_init_test.txt  ble_latest.txt  ble_latest_measurement.txt  ble_legacy_logs.txt  ble_notify_test.txt  ble_properties_log.txt  ble_second_ruler.txt  ble_test_logs.txt  find_sort_uniq.py  find_spill_com.py  formula_activity.py  formula_editor.py  full_logic_analysis.py  manifest  pkg.txt  system_ble_full.txt  Файл.txt  Файл2.txt
.beads/: config.yaml  metadata.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.qwen/: QWEN.md  settings.json
Android/: Баги с измерениями и экспортом.htm  Голосовые заметки в приложении.htm  Приложение для замеров.htm  Решения для обработки замеров.htm
GlmReader/: Form1.Designer.cs  Form1.cs  GlmReader.csproj  Program.cs
GlmReaderAndroid/: build.gradle.kts  build_output.txt  local.properties  settings.gradle.kts
archives/: app_debug_logs.txt  package_info.txt
csharp/: Directory.Build.props  Program.cs  Qwentest.CSharp.csproj  Qwentest.CSharp.sln
docs/: 17-22.md  21_GLM_PROTOCOL_FULL_SPEC.md  22_MINIMAL_APP_PLAN.md  23_NEW_CHAT_CONTEXT.md  24_MM_MO_PROTOCOL_DEEP_ANALYSIS.md  25_BLE_IMPLEMENTATION_ANALYSIS.md  28_MM_UI_ANALYSIS.md  (+21 more)
python/: __init__.py  main.py  pyproject.toml  requirements-dev.txt
python/tests/: test_placeholder.py
(+10497 files in other folders)
